fix: text-alignment, margin & size #3

--- a/poetry.css
+++ b/poetry.css
@@ -17,7 +17,7 @@ h1{
 	text-align: center;
 	font-family: 'Garamond', serif;
 	line-height: 1;
-	padding-top: 50px;
+	padding-top: 30px;
 	font-size: 3rem;
 	color: #333;
 }
@@ -33,13 +33,12 @@ p{
 
 @media (max-width: 600px){
 	h1{
-		font-size: 1.5rem;
-		padding:20%;
+		font-size: 1.2rem;
+		padding:15%;
 	}
-}
 
 	p{
-		font-size: 0.5rem;
+		font-size: 0.7rem;
 		line-height: 1.4;
 		padding:0 5%;
 	}
